package com.example.budgetbuddy.ui.screens.auth.signUp

const val TestTagSignUpScreenTitle = "TestTagSignUpScreenTitle"
const val TestTagSignUpScreenForm = "TestTagSignUpScreenForm"
const val TestTagSignUpScreenEmailInput = "TestTagSignUpScreenEmailInput"
const val TestTagSignUpScreenPasswordInput = "TestTagSignUpScreenPasswordInput"
const val TestTagSignUpScreenUsernameInput = "TestTagSignUpScreenUsernameInput"
const val TestTagSignUpScreenPasswordAgainInput = "TestTagSignUpScreenPasswordAgainInput"
const val TestTagSignUpScreenSubmitButton = "TestTagSignUpScreenSubmitButton"
const val TestTagSignUpScreenLoginButton = "TestTagSignUpScreenLoginButton"
