...
import com.example.budgetbuddy.ui.screens.transactions.list.TransactionLazyList
import com.example.budgetbuddy.ui.theme.BasicMargin
import com.example.budgetbuddy.ui.theme.DoubleMargin
import com.example.budgetbuddy.ui.theme.HalfMargin
import com.example.budgetbuddy.ui.theme.White

const val TestTagListOfTransactionsScreenListContainer = "TestTagListOfTransactionsScreenListContainer"

@Composable
fun TransactionList(
    displayTitle: Boolean = true,
    transactions: List<Transaction>,
    navigation: INavigationRouter,
...
