...
import com.example.budgetbuddy.navigation.INavigationRouter
import com.example.budgetbuddy.ui.elements.shared.basescreen.BaseScreen
import com.example.budgetbuddy.ui.elements.transactions.TransactionList
import com.example.budgetbuddy.ui.theme.BasicMargin
import com.example.budgetbuddy.ui.theme.White

const val TestTagListOfTransactionsScreenFAB = "TestTagListOfTransactionsScreenFAB"

@Composable
fun TransactionsListScreen(
    navigationRouter: INavigationRouter
) {
    val viewModel = hiltViewModel<TransactionsListViewModel>()
...
