package com.example.budgetbuddy.ui.screens.places.map

const val TestTagMapScreenGoogleMap = "TestTagMapScreenGoogleMap"
const val TestTagMapScreenFAB = "TestTagMapScreenFAB"
const val TestTagMapScreenDetailTitle = "TestTagMapScreenDetailTitle"
const val TestTagMapScreenDetailCategory = "TestTagMapScreenDetailCategory"
const val TestTagMapScreenDetailAddress = "TestTagMapScreenDetailTitle"
const val TestTagMapScreenDetailCloseButton = "TestTagMapScreenDetailCloseButton"
const val TestTagMapScreenDetailEditButton = "TestTagMapScreenDetailEditButton"
const val TestTagMapScreenDetailDeleteButton = "TestTagMapScreenDetailDeleteButton"
